can test pkcs11 lib

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+testcases/build/cpp_test
+testcases/crypto/dilithium_tests
+testcases/misc_tests/cca_export_import_test
+testcases/misc_tests/fork
+testcases/misc_tests/multi_instance
+testcases/misc_tests/obj_lock
+testcases/misc_tests/reencrypt
+testcases/misc_tests/tok2tok_transport
+testcases/pkcs11/get_interface
+usr/lib/common/lexer.c
+usr/lib/common/parser.c
+usr/lib/common/parser.h
+usr/lib/common/parser.output
+usr/sbin/pkcstok_migrate/pkcstok_migrate
+
+.cproject
+.project
+.settings/
+man/man1/pkcstok_migrate.1
+testcases/build/.deps/
+testcases/build/.dirstamp
+*.o
+*.lo
 Makefile.in
 aclocal.m4
 autom4te.cache
